@@ -44,7 +44,7 @@ class HomePagePickerViewModelTest {
     @Mock lateinit var uiStateObserver: Observer<UiState>
     @Mock lateinit var onDesignActionObserver: Observer<DesignSelectionAction>
     @Mock lateinit var onPreviewActionObserver: Observer<DesignPreviewAction>
-    @Mock lateinit var thumbnailModeObserver: Observer<PreviewMode>
+    @Mock lateinit var previewModeObserver: Observer<PreviewMode>
     @Mock lateinit var analyticsTracker: SiteCreationTracker
 
     private lateinit var viewModel: HomePagePickerViewModel
@@ -62,7 +62,7 @@ class HomePagePickerViewModelTest {
         viewModel.uiState.observeForever(uiStateObserver)
         viewModel.onDesignActionPressed.observeForever(onDesignActionObserver)
         viewModel.onPreviewActionPressed.observeForever(onPreviewActionObserver)
-        viewModel.thumbnailMode.observeForever(thumbnailModeObserver)
+        viewModel.previewMode.observeForever(previewModeObserver)
     }
 
     private fun <T> mockResponse(isError: Boolean = false, block: suspend CoroutineScope.() -> T) = test {
@@ -199,27 +199,27 @@ class HomePagePickerViewModelTest {
     }
 
     @Test
-    fun `when the picker starts on a phone the mobile thumbnails load by default`() = mockResponse {
+    fun `when the picker starts on a phone the mobile thumbnails or preview load by default`() = mockResponse {
         viewModel.start(isTablet = false)
         val captor = ArgumentCaptor.forClass(PreviewMode::class.java)
-        verify(thumbnailModeObserver).onChanged(captor.capture())
+        verify(previewModeObserver).onChanged(captor.capture())
         assertThat(requireNotNull(captor.value as PreviewMode)).isEqualTo(PreviewMode.MOBILE)
     }
 
     @Test
-    fun `when the picker starts on a tablet the tablet thumbnails load by default`() = mockResponse {
+    fun `when the picker starts on a tablet the tablet thumbnails or preview load by default`() = mockResponse {
         viewModel.start(isTablet = true)
         val captor = ArgumentCaptor.forClass(PreviewMode::class.java)
-        verify(thumbnailModeObserver).onChanged(captor.capture())
+        verify(previewModeObserver).onChanged(captor.capture())
         assertThat(requireNotNull(captor.value as PreviewMode)).isEqualTo(PreviewMode.TABLET)
     }
 
     @Test
-    fun `when the changes the preview mode the thumbnails change`() = mockResponse {
+    fun `when the changes the preview mode the thumbnails or preview change`() = mockResponse {
         viewModel.start()
         viewModel.onThumbnailModeChanged(PreviewMode.DESKTOP)
         val captor = ArgumentCaptor.forClass(PreviewMode::class.java)
-        verify(thumbnailModeObserver, times(2)).onChanged(captor.capture())
+        verify(previewModeObserver, times(2)).onChanged(captor.capture())
         assertThat(requireNotNull(captor.value as PreviewMode)).isEqualTo(PreviewMode.DESKTOP)
     }
 }
